nav flex auto width

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="nav-item">V4 > OFF-664 v5 > PRC-189 > ORC 2021001011</div>
                 <div class="nav-item"><small>Rif: </small>PO 2021/1138</div>
                 <div class="nav-item"><small>Agente: </small>PASSONI FABIO</div>
-                <div class="nav-item"><small>Owner: </small>FRANCESCA DONA’</div>
+                <!-- <div class="nav-item"><small>Owner: </small>FRANCESCA DONA’</div> -->
             </div>
 
             <div class="icon">
