--- a/index.html
+++ b/index.html
@@ -12,167 +12,46 @@
     <main>
         <article>
 
-            <div class="nav">
-                <div class="nav-item">V4 > OFF-664 v5 > PRC-189 > ORC 2021001011</div>
+            <section class="nav">
+                <div class="nav-item"><small>V4 > OFF-664 v5 > PRC-189 ></small>  ORC 2021001011</div>
                 <div class="nav-item"><small>Rif: </small>PO 2021/1138</div>
                 <div class="nav-item"><small>Agente: </small>PASSONI FABIO</div>
                 <!-- <div class="nav-item"><small>Owner: </small>FRANCESCA DONA’</div> -->
-            </div>
+            </section>
 
-            <div class="icon">
+            <section class="icon">
                 <span class="i-off">
                     OFF
                 </span>
-            </div>
-            <div class="id">OFF-664 <div class="id-vl"> <span>Bozza</span></div> </div>
-            <div class="status"> Scade il 12-11-2021</div>
-            <div class="delivery">*** Consegna richiesta: 01-12-2021 ***</div>
-            <div class="content">
-                <p>MANUFACTURE DE SOULIERS LOUIS VITTON SRL</p>
-                <div class="orders">
-                    <p> 200 NR <span class="bolder">“PIETRO FIORENTINI - proposta natale 2021”</span>  - <span class="line-through">30,21 €</span>  - SC. 5% > <span class="bolder">28,70 €</span> - 31,57 € i.i.</p>
-                </div>
-            </div>
+            </section>
 
-            <div class="price">
+            <section class="title">
+                <div class="id">
+                    <span class="code">OFF-664</span>
+                    <div class="id-vl"></div> 
+                    <span class="bozza">Bozza</span>
+                </div>
+                <div class="status">Scade il 12-11-2021</div>
+            </section>
+
+            <section class="delivery">*** Consegna richiesta: 01-12-2021 ***</section>
+
+            <section class="info">
+                <p class="client">MANUFACTURE DE SOULIERS LOUIS VITTON SRL <span>- C 2965</span></p>
+                <div class="orders">
+                    <p> 200 NR <span class="bold">“PIETRO FIORENTINI - proposta natale 2021”</span>  - <span class="line-through">30,21 €</span>  - SC. 5% > <span class="bold">28,70 €</span> - 31,57 € i.i.</p>
+                </div>
+            </section>
+
+
+
+            <section class="price">
                 <div class="price-item-1">
                     20 <small>Righe</small>
                     <button class="more-button">Espandi Tutte</button>
                  </div>
                 <div class="price-item-2">14.722,50 € <br> <small>6215,11 € i.i.</small> </div>
-            </div>
-
-        </article>
-        
-        <article>
-
-            <div class="nav">
-                <div class="nav-item">ORC/2021/202100</div>
-                <div class="nav-item"><small>Rif: </small>PO 2021/1138</div>
-                <div class="nav-item"><small>Agente: </small>PASSONI FABIO</div>
-                <div class="nav-item"><small>Owner: </small>-</div>
-            </div>
-
-            <div class="icon ">
-                <span class="i-orc">
-                    ORC
-                </span>
-            </div>
-            <div class="id">ORC/2021/2021001021<div class="id-vl"> </div> </div>
-            <div class="status"> Da Metodo</div>
-            <div class="delivery">*** Consegna richiesta: 01-12-2021 ***</div>
-            <div class="content">
-                <p>SWISS POST SOLUTIONS SPA -> SWISS POST SOLUTION SPA C.A. SIG. LUCA COSTA</p>
-                <div class="orders">
-                    <p> 42 NR <span class="bolder">“CON.LUX.01 - Confezione Luxury One”</span>  - <span class="bolder">28,70 €</span> - 15,10 € i.i.</p>
-                    <p> 42 NR <span class="bolder">“CON.LUX.01 - Confezione Luxury One”</span>  - <span class="bolder">28,70 €</span> - 15,10 € i.i.</p>
-                </div>
-            </div>
-
-            <div class="price">
-                <div class="price-item-1">20 <small>Righe</small><button class="more-button">Espandi Tutte</button> </div>
-                <div class="price-item-2">14.722,50 € <br> <small>6215,11 € i.i.</small> </div>
-            </div>
-
-        </article>
-
-        <article>
-
-            <div class="nav">
-                <div class="nav-item">ORC/2021/202100</div>
-                <div class="nav-item"><small>Rif: </small>PO 2021/1138</div>
-                <div class="nav-item"><small>Agente: </small>PASSONI FABIO</div>
-                <div class="nav-item"><small>Owner: </small>-</div>
-            </div>
-
-            <div class="icon ">
-                <span class="i-prc">
-                    PRC
-                </span>
-            </div>
-            <div class="id">PRC-81<div class="id-vl"> </div> </div>
-            <div class="status">Chiuso </div>
-            <div class="delivery">*** Consegna richiesta: 01-12-2021 ***</div>
-            <div class="content">
-                <p>PUBLITALIA SRL <small>- C 2965</small></p>
-                <div class="orders">
-                    <p> 42 NR <span class="bolder">“PIETRO FIORENTINI - proposta natale 2021”</span>  - <span class="bolder">28,70 €</span> - 15,10 € i.i.</p>
-                </div>
-            </div>
-
-            <div class="price">
-                <div class="price-item-1">20 <small>Righe</small> 
-                    <button class="more-button">Espandi Tutte</button></div>
-                <div class="price-item-2">14.722,50 € <br> <small>6215,11 € i.i.</small> </div>
-            </div>
-
-        </article>
-
-        <article>
-
-            <div class="nav">
-                <div class="nav-item">ORC/2021/202100</div>
-                <div class="nav-item"><small>Rif: </small>PO 2021/1138</div>
-                <div class="nav-item"><small>Agente: </small>PASSONI FABIO</div>
-                <div class="nav-item"><small>Owner: </small>-</div>
-            </div>
-
-            <div class="icon ">
-                <span class="i-prc">
-                    PRC
-                </span>
-            </div>
-            <div class="id">PRC-82<div class="id-vl"> </div> </div>
-            <div class="status"> In approvazione CS </div>
-            <div class="delivery">*** Consegna richiesta: 01-12-2021 ***</div>
-            <div class="content">
-                <p>PUBLITALIA SRL <small>- C 2965</small></p>
-                <div class="orders">
-                    <p> 42 NR <span class="bolder">“PIETRO FIORENTINI - proposta natale 2021”</span>  - <span class="bolder">28,70 €</span> - 15,10 € i.i.</p>
-                </div>
-            </div>
-
-            <div class="price">
-                <div class="price-item-1">
-                    20 <small>Righe</small> 
-                    <button class="more-button">Espandi Tutte</button>
-                </div>
-                <div class="price-item-2">14.722,50 € <br> <small>6215,11 € i.i.</small> </div>
-            </div>
-
-        </article>
-
-        <article>
-
-            <div class="nav">
-                <div class="nav-item">ORC/2021/202100</div>
-                <div class="nav-item"><small>Rif: </small>PO 2021/1138</div>
-                <div class="nav-item"><small>Agente: </small>PASSONI FABIO</div>
-                <div class="nav-item"><small>Owner: </small>-</div>
-            </div>
-
-            <div class="icon ">
-                <span class="i-com">
-                    COM
-                </span>
-            </div>
-            <div class="id">COM-01<div class="id-vl"> <span>Bozza</span> </div> </div>
-            <div class="status">-</div>
-            <div class="delivery">*** Consegna richiesta: 01-12-2021 ***</div>
-            <div class="content">
-                <p>PUBLITALIA SRL <small>- C 2965</small></p>
-                <div class="orders">
-                    <p> 42 NR <span class="bolder">“PIETRO FIORENTINI - proposta natale 2021”</span>  - <span class="bolder">28,70 €</span> - 15,10 € i.i.</p>
-                </div>
-            </div>
-
-            <div class="price">
-                <div class="price-item-1">
-                    20 <small>Righe</small> 
-                    <button class="more-button">Espandi Tutte</button>
-                </div>
-                <div class="price-item-2">14.722,50 € <br> <small>6215,11 € i.i.</small> </div>
-            </div>
+            </section>
 
         </article>
 
