--- a/index.html
+++ b/index.html
@@ -55,6 +55,47 @@
 
         </article>
 
+        <article>
+
+            <section class="nav">
+                <div class="nav-item">5218838035</div>
+                <div class="nav-item"><small>Agente: </small>STEFANO COCCO</div>
+            </section>
+
+            <section class="icon">
+                <span class="i-deal">
+                    DEAL
+                </span>
+            </section>
+
+            <section class="title">
+                <div class="id">
+                    <span class="code">DEAL 198345</span>
+                    <div class="id-vl"></div> 
+                </div>
+                <div class="status">Closed Date 08/31/2021</div>
+            </section>
+
+            <section class="delivery">*** Consegna richiesta: 01-12-2021 ***</section>
+
+            <section class="info">
+                <p class="client">OPTIMERA INC.<span> - 618933976</span></p>
+                <div class="orders">
+                    <p> “OptimERA - Quarterly Subscription (Aug21-Jan22) FT ATH USA 21_23/2021”</p>
+                </div>
+            </section>
+
+
+            <section class="price">
+                <div class="price-item-1">
+                    20 <small>Righe</small>
+                    <button class="more-button">Espandi Tutte</button>
+                 </div>
+                <div class="price-item-2">14.722,50 € <br> <small>6215,11 € i.i.</small> </div>
+            </section>
+
+        </article>
+
     </main>
 </body>
 </html>
