--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section class="title">
                 <div class="id">
                     <span class="code">OFF-664</span>
-                    <div class="id-vl"></div> 
+                    <div class="v-line"></div> 
                     <span class="bozza">Bozza</span>
                 </div>
                 <div class="status">Scade il 12-11-2021</div>
@@ -39,6 +39,7 @@
             <section class="info">
                 <p class="client">MANUFACTURE DE SOULIERS LOUIS VITTON SRL <span>- C 2965</span></p>
                 <div class="orders">
+                    <p> 200 NR <span class="bold">“PIETRO FIORENTINI - proposta natale 2021”</span>  - <span class="line-through">30,21 €</span>  - SC. 5% > <span class="bold">28,70 €</span> - 31,57 € i.i.</p>
                     <p> 200 NR <span class="bold">“PIETRO FIORENTINI - proposta natale 2021”</span>  - <span class="line-through">30,21 €</span>  - SC. 5% > <span class="bold">28,70 €</span> - 31,57 € i.i.</p>
                 </div>
             </section>
@@ -71,9 +72,9 @@
             <section class="title">
                 <div class="id">
                     <span class="code">DEAL 198345</span>
-                    <div class="id-vl"></div> 
+                    <div class="v-line-lg"></div> 
                 </div>
-                <div class="status">Closed Date 08/31/2021</div>
+                <div class="status status-bold">Offer Made</div>
             </section>
 
             <section class="delivery">*** Consegna richiesta: 01-12-2021 ***</section>
@@ -83,6 +84,45 @@
                 <div class="orders">
                     <p> “OptimERA - Quarterly Subscription (Aug21-Jan22) FT ATH USA 21_23/2021”</p>
                 </div>
+            </section>
+
+
+            <section class="price">
+                <div class="price-item-1">
+                    20 <small>Righe</small>
+                    <button class="more-button">Espandi Tutte</button>
+                 </div>
+                <div class="price-item-2">14.722,50 € <br> <small>6215,11 € i.i.</small> </div>
+            </section>
+
+        </article>
+
+        <article>
+
+            <section class="nav">
+                <div class="nav-item"><small>OFF-811 v1 > OFF-811 v2 ></small> PRC-81</div>
+                <div class="nav-item"><small>Agente: </small>A 10 - CLIENTE DIREZIONALE</div>
+                <div class="nav-item"><small>Owner: </small>FRANCESCA DONA’</div>
+            </section>
+
+            <section class="icon">
+                <span class="i-rfx">
+                    RFX
+                </span>
+            </section>
+
+            <section class="title">
+                <div class="id">
+                    <span class="code">RFX-82</span>
+                    <div class="v-line-lg"></div> 
+                </div>
+                <div class="status status-blue">In approvazione CS</div>
+            </section>
+
+            <section class="delivery">*** Consegna richiesta: 01-12-2021 ***</section>
+
+            <section class="info">
+                <p class="client">PUBLITALIA SRL <span>- C 2965</span> </p>
             </section>
 
 
