changing icon style, span to div

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </section>
 
             <section class="icon">
-                <span class="i-off">
+                <div class="i-off">
                     OFF
-                </span>
+                </div>
             </section>
 
             <section class="title">
@@ -64,9 +64,9 @@
             </section>
 
             <section class="icon">
-                <span class="i-deal">
+                <div class="i-deal">
                     DEAL
-                </span>
+                </div>
             </section>
 
             <section class="title">
@@ -106,9 +106,9 @@
             </section>
 
             <section class="icon">
-                <span class="i-rfx">
+                <div class="i-rfx">
                     RFX
-                </span>
+                </div>
             </section>
 
             <section class="title">
