--- a/template3/index.html
+++ b/template3/index.html
@@ -12,7 +12,7 @@
     <header>
 
         <div class="logo">
-            <img src="img/logo.png" alt="">
+            <img src="logo.png" alt="">
             
             <span class="message">
                 <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8" style="margin-right: 5px;">
