--- a/template3/index.html
+++ b/template3/index.html
@@ -114,12 +114,11 @@
             </section>
 
             <section class="title">
-            <div class="id">
-                <span class="code">OFF-664</span>
-                <div class="v-line"></div> 
-                <span class="bozza">Bozza</span>
-            </div>
-            <div class="status">Scade il 12-11-2021</div>
+                    <span class="code">OFF-664</span>
+                    <div class="message">
+                        <span class="bozza">Bozza</span>
+                    </div>
+                    <div class="status">Scade il 12-11-2021</div>
             </section>
 
             <section class="delivery">*** Consegna richiesta: 01-12-2021 ***</section>
@@ -129,7 +128,7 @@
             </section>
 
             <section class="price">
-                <div class="price-item-2">14.722,50 €</div>
+                <div class="price-item-2">14.722 <small>,50€</small></div>
             </section>
 
         </article>
