add profile to nav

--- a/template3/index.html
+++ b/template3/index.html
@@ -84,6 +84,15 @@
                           
                     </a>
                 </li>
+                <li>
+                    <a href="">
+                        <span class="profile">CB</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="6.406" height="3.91" viewBox="0 0 6.406 3.91">
+                            <path id="Path_396" data-name="Path 396" d="M1833.617,79.246l2.85,2.85,2.85-2.85" transform="translate(-1833.264 -78.893)" fill="none" stroke="#8b8080" stroke-width="1"/>
+                          </svg>
+                          
+                    </a>
+                </li>
             </ul>
         </nav>
 
