add second alert

--- a/alert-template/alert-1.html
+++ b/alert-template/alert-1.html
@@ -39,7 +39,7 @@
                 <h2>Hai creato l’ordine FRC-24857</h2>
             </div>
 
-            <div class="info">
+            <div class="info info-2c">
                 <div class="info-col"> 
                     <span class="title">Cliente</span>
                     <hr>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="actions">
-                <button onclick="">Continua</button>
+                <button class="success">Continua</button>
             </div>
 
         </div>
